Fix jumptron width on hits page

--- a/app/assets/stylesheets/views/hits.css.scss
+++ b/app/assets/stylesheets/views/hits.css.scss
@@ -14,10 +14,9 @@ html.home_hits .container-fluid {
   }
 }
 
-html.home_hits header.jumptron
-{
+html.home_hits header.jumptron {
   @include clearfix;
-  margin: 0 -20px;
+
   @media (min-width: $screen-sm-min) {
     margin: 40px -20px 30px;
   }
